fix enemy behavior